--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -17,6 +17,11 @@
       text-align: left;
       /* Ensures text alignment is left */
 
+
+      .quick-link-item {
+        cursor: pointer;
+      }
+
       .policy-links {
         cursor: pointer;
       }
@@ -201,7 +206,7 @@
     gap: 10px;
     text-align: center;
   }
-  
+
 }
 @media (max-width: 576px) {
   .footer-container {
@@ -223,5 +228,5 @@
     gap: 5px;
     text-align: center;
   }
-  
+
 }
