--- a/src/app/features/product/_components/product/product.component.html
+++ b/src/app/features/product/_components/product/product.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="product-price">
-      {{ currencyService.getSymbol() }}{{ currencyService.convertPrice(product.price) }}
+      {{ currencyService.format(product?.price, currencyService.currency()) }}
     </div>
 
     <div class="rating-cart-wrapper">
